<resources>
    <string name="app_name">Share Location</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_key">AIzaSyDhleTlwgHiGm_HzgwSI73LRMms0d-NAJk</string>
    <string name="cont_toev">Contact toevoegen</string>
    <string name="e_mail">E-mail</string>
    <string name="wachtwoord_bevestigen">Wachtwoord bevestigen</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="al_een_account">Al een account? Ga naar login.</string>
    <string name="registreren">Registreren</string>
    <string name="inloggen">Inloggen</string>
    <string name="nog_geen_account">Nog geen account? Registreer je nu!</string>
    <string name="uitloggen">Uitloggen</string>
    <string name="voornaam">Voornaam</string>
    <string name="achternaam">Achternaam</string>
    <string name="groepsnaam">Groepsnaam</string>
</resources>
