<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    android:layout_centerVertical="true"
    tools:context="nl.adeda.sharelocation.Activities.RegisterActivity">
    
    <ImageView
        android:id="@+id/loqa_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:src="@drawable/loqa_logo_white" />

    <LinearLayout
        android:id="@+id/namen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loqa_logo"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginEnd="5dp"
            android:textColorHint="@color/hintColor">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#212121"
                android:textColor="@color/colorPrimary"
                android:hint="@string/voornaam"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="5dp"
            android:textColorHint="@color/hintColor">

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#212121"
                android:textColor="@color/colorPrimary"
                android:hint="@string/achternaam"/>

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/namen"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/hintColor">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/e_mail"
            android:background="#212121"
            android:textColor="@color/colorPrimary"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTIL"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/hintColor">

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/wachtwoord"
            android:background="#212121"
            android:textColor="@color/colorPrimary"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passConfTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTIL"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/hintColor">

        <EditText
            android:id="@+id/passwordConfirmField"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/wachtwoord_bevestigen"
            android:background="#212121"
            android:textColor="@color/colorPrimary"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registreren"
        android:layout_below="@id/passConfTIL"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/signInLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/al_een_account"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/signUpBtn"
        style="?android:attr/borderlessButtonStyle"/>

</RelativeLayout>
